theme_files = bottom_left.png            \
              bottom_right.png           \
              close.png                  \
              Makefile.am                \
              maximize.png               \
              menu.png                   \
              metacity-theme-1.xml       \
              minimize.png               \
              restore.png                \
              title-blocker-bottom.png   \
              title-blocker-right.png    \
              title-gradient-bottom.png  \
              white_stripes_tile.png     \
              metacity-theme-1.xml

themedir = $(THEME_DIR)
theme_DATA = $(theme_files)

EXTRA_DIST = $(theme_files)

MAINTAINERCLEANFILES = Makefile.in
